--- a/app/src/main/res/layout/item_movie_list.xml
+++ b/app/src/main/res/layout/item_movie_list.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -12,34 +13,45 @@
     android:layout_height="wrap_content">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="20dp"
-        android:background="@drawable/gradient_purple">
+        android:background="@drawable/gradient_purple"
+        android:padding="20dp">
 
-        <ImageView
-            android:id="@+id/ivMovie"
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/containerMovieImage"
             android:layout_width="50dp"
             android:layout_height="wrap_content"
-            android:adjustViewBounds="true"
-            android:src="@drawable/dummy_poster"
+            app:cardCornerRadius="8dp"
+            app:cardElevation="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ImageView
+                android:id="@+id/ivMovie"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                android:src="@drawable/dummy_poster" />
+
+        </com.google.android.material.card.MaterialCardView>
 
         <TextView
             android:id="@+id/txtTitle"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
+            android:layout_marginStart="15dp"
             android:ellipsize="end"
             android:fontFamily="@font/roboto_bold"
             android:lines="2"
             android:maxLines="2"
             android:text="@string/dummy_title"
             android:textColor="@color/white"
-            android:textSize="17sp"
-            app:layout_constraintStart_toEndOf="@id/ivMovie"
+            android:textSize="18sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/containerMovieImage"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
@@ -52,22 +64,22 @@
             android:maxLines="2"
             android:text="27 Sep 2020"
             android:textColor="#EFEFEF"
-            android:textSize="14sp"
+            android:textSize="15sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/ivMovie"
+            app:layout_constraintStart_toEndOf="@+id/containerMovieImage"
             app:layout_constraintTop_toBottomOf="@+id/txtTitle"
             app:layout_constraintVertical_bias="1" />
 
         <ImageView
             android:id="@+id/imageView2"
-            android:layout_width="15dp"
-            android:layout_height="15dp"
+            android:layout_width="18dp"
+            android:layout_height="18dp"
+            android:layout_marginRight="5dp"
             android:adjustViewBounds="true"
             android:src="@drawable/ic_star"
-            android:layout_marginRight="5dp"
-            app:layout_constraintHorizontal_bias="1"
             app:layout_constraintBottom_toBottomOf="@+id/txtDate"
             app:layout_constraintEnd_toStartOf="@+id/txtRating"
+            app:layout_constraintHorizontal_bias="1"
             app:layout_constraintStart_toEndOf="@+id/txtDate"
             app:layout_constraintTop_toTopOf="@+id/txtDate" />
 
@@ -80,7 +92,7 @@
             android:maxLines="2"
             android:text="8.5"
             android:textColor="#EFEFEF"
-            android:textSize="14sp"
+            android:textSize="15sp"
             app:layout_constraintBottom_toBottomOf="@+id/imageView2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/imageView2" />
