--- a/app/src/main/res/layout/item_movie_list.xml
+++ b/app/src/main/res/layout/item_movie_list.xml
@@ -16,7 +16,7 @@
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/gradient_purple"
+        android:background="@drawable/gradient_orange"
         android:padding="20dp">
 
         <com.google.android.material.card.MaterialCardView
@@ -33,8 +33,7 @@
                 android:id="@+id/ivMovie"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:adjustViewBounds="true"
-                android:src="@drawable/dummy_poster" />
+                android:adjustViewBounds="true" />
 
         </com.google.android.material.card.MaterialCardView>
 
