--- a/app/src/main/res/layout/item_movie_list.xml
+++ b/app/src/main/res/layout/item_movie_list.xml
@@ -4,11 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:clickable="true"
+    app:rippleColor="@color/rippleColorCard"
     app:cardElevation="2dp"
     android:layout_marginTop="5dp"
     android:layout_marginBottom="10dp"
-    android:layout_marginRight="20dp"
-    android:layout_marginLeft="20dp"
+    android:layout_marginRight="15dp"
+    android:layout_marginLeft="15dp"
     app:cardCornerRadius="15dp"
     android:layout_height="wrap_content">
 
