--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="transparent">#00FFFFFF</color>
 
     <color name="rippleColorCard">#BCBCBC</color>
+    <color name="grayEF">#EFEFEF</color>
 </resources>
